--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,113 @@
+/*-- Загальні скидання --*/
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+/*-- Загальні стилі --*/
+
 body {
   font-family: "Montserrat", sans-serif;
   color: #1b1d1f;
+  margin: 0;
+}
+
+/*-- Section 1 Main-page --*/
+
+.main-page {
+  background: linear-gradient(271deg, #a5deff 0%, #fcfefe 100%);
+  width: 100%;
+}
+
+.main-logo {
+  position: absolute;
+  top: 32px;
+  left: 0;
+}
+
+.main-page-wrapper-text {
   background: #fff;
+  border-radius: 40px;
+  padding: 59px 69px 60px 60px;
+  box-sizing: border-box;
+}
+
+.container-wrapper {
+  display: flex;
+  margin: auto;
+  justify-content: space-between;
+  align-items: center;
+  width: 1170px;
+  position: relative;
+}
+
+.main-title-heading-text {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.5;
+  text-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  margin-bottom: 60px;
+}
+
+.main-title-heading {
+  font-weight: 600;
+  font-size: 64px;
+  margin-bottom: 25px;
+  line-height: 1.13;
+}
+
+.main-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  margin-bottom: 31px;
+}
+
+.main-btn {
+  border: none;
+  min-height: 48px;
+  min-width: 172px;
+  margin: 0 auto;
+  display: block;
+  border-radius: 8px;
+  padding: 12px 24px;
+  background-color: #ff6b0a;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #fff;
+  cursor: pointer;
+}
+
+/*-- Section 2 Facts --*/
+
+.facts {
+  padding: 57px 0 100px;
+  text-align: center;
+}
+
+.facts-truzyb {
+  margin-bottom: 24px;
+}
+
+.facts-title-headline {
+  font-weight: 600;
+  font-size: 48px;
+  margin-bottom: 32px;
+  line-height: 1.5;
+}
+
+.facts-text {
+  font-weight: 400;
+  font-size: 16px;
+  width: 772px;
+  line-height: 1.5;
+  margin: auto;
+  margin-bottom: 32px;
 }
