--- a/css/styles.css
+++ b/css/styles.css
@@ -111,3 +111,126 @@ body {
   margin: auto;
   margin-bottom: 32px;
 }
+
+.facts-icon-banderogoose {
+  margin-bottom: 8px;
+}
+
+.facts-title-subject {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1;
+  text-align: center;
+
+  margin-bottom: 24px;
+}
+
+.facts-text-info {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+}
+
+.facts-wrapper {
+  flex-basis: calc((100% - 48px) / 3);
+}
+
+/*-- Section 3 Form --*/
+
+.section-form {
+  background: linear-gradient(271deg, #a5deff 0%, #fcfefe 100%);
+  width: 100%;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form {
+  box-sizing: border-box;
+  border-radius: 40px;
+  background: #fff;
+  padding: 32px 65px 58px 65px;
+  text-align: center;
+}
+
+.facts-truzyb-form {
+  margin-bottom: 32px;
+}
+
+.form-title-subject {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1;
+  margin-bottom: 12px;
+}
+
+.form-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  margin-bottom: 24px;
+}
+
+.form-input-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.form-input-wrapper-name {
+  margin-bottom: 24px;
+}
+
+.form-label {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  margin-bottom: 12px;
+}
+
+.form-input {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  border: 1px solid #005bbb;
+  border-radius: 10px;
+  background: #fff;
+  box-sizing: border-box;
+  padding: 12px 24px;
+  width: 100%;
+}
+
+.form-btn {
+  border: none;
+  min-height: 48px;
+  min-width: 172px;
+  margin: 0 auto;
+  display: block;
+  border-radius: 8px;
+  padding: 12px 24px;
+  background-color: #ff6b0a;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #fff;
+  cursor: pointer;
+}
+
+.form-input-wrapper-email {
+  margin-bottom: 48px;
+}
+.gus-anim {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  margin-bottom: auto;
+  margin-top: auto;
+  width: 100%;
+  z-index: 2;
+  pointer-events: none;
+}
